# connect-4-game-engine

./: README.md  pyproject.toml
src/connect4_engine/: __init__.py  board.py  cli.py  engine.py  history.py  minimax.py
tests/: conftest.py  test_board.py  test_cli.py  test_engine.py  test_history.py  test_minimax.py
